fix: adjust margin-bottom of contact header for better spacing

--- a/src/styles/sections/_contact.scss
+++ b/src/styles/sections/_contact.scss
@@ -11,7 +11,7 @@
   overflow: hidden;
 
   .contact-header {
-    margin-bottom: $spacing-xxl;
+    margin-bottom: $spacing-xl;
     z-index: 1;
     .contact-title {
       font-size: $font-size-title;
